# mai-os-3

./: CMakeLists.txt
report/: 211_Кудрявцев_Лаб3.docx
src/: child1.c  child2.c  parent.c
